tests/machine/x/go/join_multi.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/join_multi.go:54:35: cannot use func() []Result {…}() (value of type []Result) as []map[string]string value in variable declaration

1: //go:build ignore
